# segway-control-suite

./: .editorconfig  .gitattributes  .gitignore  404.html  CHANGELOG.md  CHECKPOINTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Control GUI/: ROA.py  derive_dynamics.py  optim_segway_generic.py  segway.xml  segway_control_lqr.py  segway_control_mpc.py  segway_control_poleplacement.py  segway_control_slidingmode.py  segway_controllers.py  segway_dynamics.py  segway_gui.py
advanced-methods/: index.html
apps/: _common.py  desktop_gui.py  streamlit_app.py
architecture/: index.html
benchmarks/: run_all.py  run_nav.py  tune_all.py
docs/: advanced-methods.md  architecture.md  implementation-notes.md  index.md  navigation.md  roadmap.md
docs/theory/: modeling.md
examples/: generate_extra_media.py  generate_media.py  generate_nav_media.py
implementation-notes/: index.html
roadmap/: index.html
scripts/: train_nav_rl.py  train_rl.py
search/: search_index.json
src/segway/: __init__.py  cli.py
src/segway/analysis/: __init__.py  metrics.py  roa.py  robustness.py
src/segway/config/: __init__.py  params.py
src/segway/controllers/: __init__.py  base.py  cascaded_pid.py  hinf.py  lqr.py  mpc.py  mrac.py  pid.py  pole_placement.py  rl_policy.py  smc.py  swingup.py
src/segway/envs/: __init__.py  gym_env.py  twip_nav_env.py
src/segway/estimation/: __init__.py  ekf.py  kalman.py  sensors.py
src/segway/models/: __init__.py  dynamics.py  symbolic.py  twip.py
src/segway/models/assets/: cartpole.xml  segway.xml  twip.xml
src/segway/navigation/: __init__.py  control.py  followers.py  maps.py  navigator.py  planners.py  plot.py  rl_nav.py  sim.py  terrain.py  world.py
src/segway/planning/: __init__.py  ilqr.py  reference.py
src/segway/sim/: __init__.py  mujoco_backend.py  mujoco_terrain.py  mujoco_twip.py  runner.py  scenarios.py
src/segway/tuning/: __init__.py  ga_tuner.py  objective.py  optuna_tuner.py
src/segway/viz/: __init__.py  live.py  nav_plots.py  plots.py  render.py  style.py
tests/: test_advanced_controllers.py  test_analysis.py  test_controllers.py  test_dynamics.py  test_estimation.py  test_followers.py  test_metrics.py  test_mujoco.py  test_mujoco_twip.py  test_nav_benchmark.py  test_nav_maps.py  test_navigator.py  test_planners.py  test_planning.py  test_rl.py  test_sim.py  test_terrain.py  test_tuning.py  test_twip.py  test_twip_nav_rl.py  test_viz_nav.py
theory/modeling/: index.html
