[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segway-control-suite"
version = "0.1.0"
description = "A rigorous, reproducible benchmark of control strategies for a self-balancing wheeled inverted pendulum — from classical to learned."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Manas Reddy Arumalla", email = "manasreddyarumalla@gmail.com" }]
keywords = ["control", "robotics", "inverted-pendulum", "lqr", "mpc", "reinforcement-learning", "mujoco"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
]

# Core engine deps: keep this lean so the package imports and tests run anywhere.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
mpc = ["cvxpy>=1.3", "osqp>=0.6"]
sim = ["mujoco>=3.0"]
viz = ["matplotlib>=3.7", "imageio>=2.31", "imageio-ffmpeg>=0.4"]
rl = ["gymnasium>=0.29", "stable-baselines3>=2.0"]
tuning = ["deap>=1.4", "optuna>=3.4", "cmaes>=0.10"]
gui = ["customtkinter>=5.2"]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
symbolic = ["sympy>=1.12"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3", "mypy>=1.8"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
all = [
    "cvxpy>=1.3", "osqp>=0.6", "mujoco>=3.0", "matplotlib>=3.7", "imageio>=2.31",
    "imageio-ffmpeg>=0.4", "gymnasium>=0.29", "stable-baselines3>=2.0", "deap>=1.4",
    "optuna>=3.4", "customtkinter>=5.2", "streamlit>=1.30", "plotly>=5.18", "sympy>=1.12",
]

[project.scripts]
segway = "segway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
segway = ["models/assets/*.xml", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "NPY"]
# E741: `l` (length) and `I` (inertia) are standard control/physics symbols here.
# B027: Controller.reset is a deliberate optional no-op hook, not an abstract method.
ignore = ["E501", "E741", "B027"]

[tool.ruff.lint.per-file-ignores]
# Runnable entry-point scripts insert `src/` onto sys.path before importing `segway`,
# so their imports intentionally follow that bootstrap (E402).
"apps/*" = ["E402"]
"benchmarks/*" = ["E402"]
"scripts/*" = ["E402"]
"examples/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
